--- a/style.css
+++ b/style.css
@@ -247,10 +247,11 @@ footer{
     position: sticky;
     left: 0;
     bottom: 0;
-    width: 100%;
+    width: 100vw;
     padding: 10px;
     border-top-left-radius : 5px;
     border-top-right-radius : 5px;
+    height: 4vh;
     background-color: gray;
     color: white;
 }
@@ -378,4 +379,5 @@ footer{
     .AboutProj{
         margin: auto;
     }
+   
 }
